# beacon

./: .gitignore  BUILD.gn  Dockerfile  README.md  beacon_extra_paks.gni  beacon_repack_percent.gni
app/: beacon_exe.rc  beacon_exe.ver
app/theme/beacon/: BRANDING
browser/: BUILD.gn  beacon_profile_prefs.cc  beacon_profile_prefs.h  sources.gni
browser/autocomplete/: beacon_autocomplete_scheme_classifier.cc  beacon_autocomplete_scheme_classifier.h  sources.gni
browser/resources/: resource_ids
browser/ui/: BUILD.gn
browser/ui/omnibox/: beacon_omnibox_client_impl.cc  beacon_omnibox_client_impl.h
browser/ui/toolbar/: beacon_location_bar_model_delegate.cc  beacon_location_bar_model_delegate.h
browser/ui/views/profiles/: beacon_profile_menu_view.cc  beacon_profile_menu_view.h
browser/ui/webui/: beacon_polymer.js  beacon_web_ui_controller_factory.cc  beacon_web_ui_controller_factory.h
browser/ui/webui/beacon_welcome/: beacon_welcome_handler.cc  beacon_welcome_handler.h  beacon_welcome_ui.cc  beacon_welcome_ui.h  beacon_welcome_util.cc  beacon_welcome_util.h
browser/ui/webui/hns_internals/: beacon_hns_internals_handler.cc  beacon_hns_internals_handler.h  beacon_hns_internals_ui.cc  beacon_hns_internals_ui.h  beacon_hns_internals_util.cc  beacon_hns_internals_util.h
chromium_src/: BUILD.gn
chromium_src/chrome/app/: chrome_main_delegate.h
chromium_src/chrome/browser/: browser_about_handler.cc
chromium_src/chrome/common/: chrome_constants.cc  url_constants.cc
chromium_src/chrome/install_static/: chromium_install_modes.cc  chromium_install_modes.h
chromium_src/components/os_crypt/: keychain_password_mac.mm
chromium_src/components/page_info/: page_info_ui.cc
chromium_src/components/ssl_errors/: error_info.cc
chromium_src/content/browser/: network_service_instance_impl.cc
chromium_src/content/renderer/: render_thread_impl.cc
common/: BUILD.gn  beacon_content_client.cc  beacon_content_client.h  url_constants.cc  url_constants.h
components/core/: BUILD.gn  build_libs.py  cgo.go  config.gni  go.mod  go.sum
components/core/bindings/: BUILD.gn  bindings.cc  bindings.h  core_library.cc  core_library.h
components/core/internal/: factory.go  tld.go  trustanchor.go  verifier_grpc.go
components/core/internal/content/: pages.go  pages_test.go
components/core/internal/content/resources/: hns-internals.html  info.json  welcome.html
components/core/internal/content/resources/assets/: style.css
components/core/public/: README.md
components/core/public/proto/: dnssec_cert_verifier.pb.go  dnssec_cert_verifier_grpc.pb.go  go-gen.sh
components/hns_internals/: BUILD.gn  beacon_hns_internals.html  beacon_hns_internals_app.html  beacon_hns_internals_app.ts  beacon_hns_internals_proxy.ts
components/welcome/: BUILD.gn  beacon_welcome.html  beacon_welcome_app.ts  beacon_welcome_proxy.ts  tsconfig_base.json
content/browser/: trust_service_instance_impl.cc  trust_service_instance_impl.h
installer/mac/: BUILD.gn
installer/mac/internal/: beacon_dmg.py  beacon_dmg_background.tiff  chrome_dmg_dsstore  chrome_dmg_icon.icns  internal_config.py  release.6ba3c10a73b04c54bb4465cdf077f6249903e968.provisionprofile
net/dns/: beacon_resolve_context.cc  beacon_resolve_context.h  sources.gni
overrides/components/: beacon_page_info_strings.grdp  components_chromium_strings__override.grd  components_strings__override.grd
patches/: base-win-embedded_i18n-create_string_rc.py.patch  build-config-BUILDCONFIG.gn.patch  build-config-chrome_build.gni.patch  chrome-BUILD.gn.patch  chrome-app-chrome_dll.rc.patch  chrome-browser-BUILD.gn.patch  chrome-browser-extensions-extension_tab_util.cc.patch  chrome-browser-net-stub_resolver_config_reader.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-resources-signin-profile_picker-profile_creation_flow-local_profile_customization.html.patch  chrome-browser-shell_integration_linux.cc.patch  chrome-browser-signin-account_consistency_mode_manager.cc.patch  chrome-browser-ui-browser_navigator.cc.patch  chrome-browser-ui-startup-startup_browser_creator_impl.cc.patch  chrome-browser-ui-views-page_info-page_info_security_content_view.cc.patch  chrome-browser-ui-views-profiles-profile_menu_view.h.patch  chrome-browser-ui-views-tabs-tab_hover_card_bubble_view.h.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  chrome-chrome_paks.gni.patch  chrome-chrome_proxy-chrome_proxy_main_win.cc.patch  chrome-common-BUILD.gn.patch  chrome-installer-launcher_support-chrome_launcher_support.cc.patch  chrome-installer-mac-signing-parts.py.patch  chrome-installer-mac-signing-pipeline.py.patch  chrome-installer-mini_installer-chrome.release.patch  chrome-installer-util-prebuild-create_installer_string_rc.py.patch  chrome-tools-build-mac-BUILD.gn.patch  chrome-tools-build-mac-infoplist_strings_util.cc.patch  components-omnibox-browser-autocomplete_input.cc.patch  components-omnibox-browser-omnibox_edit_model.cc.patch  components-os_crypt-keychain_password_mac.mm.patch  components-page_info-page_info_ui.cc.patch  components-security_interstitials-content-cert_report_helper.cc.patch  components-security_interstitials-core-browser-resources-interstitial_safebrowsing.css.patch  components-security_interstitials-core-ssl_error_options_mask.cc.patch  components-ssl_errors-error_info.cc.patch  content-browser-BUILD.gn.patch  content-browser-network_service_instance_impl.cc.patch  content-browser-webui-web_ui_impl.cc.patch  content-renderer-render_thread_impl.cc.patch  (+10 more)
services/trust/: BUILD.gn  README.md  trust_service.cc  trust_service.h
services/trust/client/: BUILD.gn  client_errors.cc  client_errors.h  dnssec_cert_verifier.cc  dnssec_cert_verifier.h  dnssec_cert_verifier_factory.cc  dnssec_cert_verifier_factory.h
services/trust/client/grpc/: BUILD.gn  grpc_client.cc  grpc_client.h  grpc_client_cq_tag.h  grpc_client_thread.cc  grpc_client_thread.h  grpc_state.h  grpc_util.cc  grpc_util.h
services/trust/client/proto/: BUILD.gn  dnssec_cert_verifier.proto
tools/scripts/: patch.py
tools/src/butil/: README.md  (+3 more)
(+62 files in other folders)
