group("browser") {
    visibility = [
        "//beacon:browser_dependencies",
        "//beacon/browser/*",
    ]

    # Group depending on upstream's counterpart to make it easier to manage
    # dependencies in beacon/ (//chrome/browser does not depend on this target
    # so //beacon/browser becomes essentially an alias for //chrome/browser now).
    public_deps = [ "//chrome/browser" ]
}
