import("//testing/test.gni")

source_set("client") {
    sources = [
        "client_errors.cc",
        "client_errors.h",
        "dnssec_cert_verifier.cc",
        "dnssec_cert_verifier.h",
        "dnssec_cert_verifier_factory.cc",
        "dnssec_cert_verifier_factory.h"
    ]

    public_deps = [
        "grpc",
        "//net",
        "//url",
        "//beacon/services/trust/client/proto:dnssec_cert_verifier",
    ]
}

